feat: delete opening swagger documentation
