# handler/response.go
@@ -35,3 +35,8 @@ type CreateOpeningResponse struct {
 	Message string `json:"message"`
 	Data schemas.OpeningResponse `json:"data"`
 }
+
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
